--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,91 @@
+:root {
+  --main-font: font-family: 'Hind', sans-serif;
+  --heading-font:'Montserrat', sans-serif;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
-  font-size: 14px;
-  padding: 10px;
+  font-size: 16px;
+  line-height: 1.3;
 }
 
 header {
+  grid-row: 1/2;
   position: sticky;
-  display: flex;
-  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  font-family: var(--heading-font);
+}
+
+h2 {
+  font-size: 18px;
+  font-weight: 400; 
 }
 
 i {
+  font-size: 18px;
+}
+
+footer {
+  grid-row: 7/8;
+  position: sticky;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  font-family: var(--heading-font);
+}
+
+.content {
+  display: grid; 
+  grid-template-rows: repeat(7, 1fr);
+  height: 100vh;
+  padding: 40px 10px 10px 10px;
 }
 
 .titleCtr {
-  text-align: center;
+  grid-column: 5/2;
+  display: flex;
+  flex-direction: column;
+  
+  align-items: center;
+}
+
+.ellipsisDiv {
+  display: flex;
+  justify-content: center;
+  padding: 10px
+}
+
+.menuDiv {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.menuItemDiv {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.menuItemDiv > i {
+  margin-bottom: 5px;
+}
+
+.logo {
+  font-family: var(--heading-font);
+  font-style: italic;
+  font-size: 0.9rem;
+  opacity: 80%;
+}
+
+.taskListCtr {
+  grid-row: 2/7
 }
