--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 :root {
-  --main-font: font-family: 'Hind', sans-serif;
-  --heading-font:'Montserrat', sans-serif;
+  --main-font: "Montserrat", sans-serif;
+  --heading-font: "Montserrat", sans-serif;
+  --heading-weight: 700;
 }
 
 * {
@@ -12,6 +13,7 @@
 body {
   font-size: 16px;
   line-height: 1.3;
+  font-family: var(--main-font);
 }
 
 header {
@@ -20,11 +22,12 @@ header {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
   font-family: var(--heading-font);
+  font-weight: var(--heading-weight);
 }
 
 h2 {
   font-size: 18px;
-  font-weight: 400; 
+  font-weight: 400;
 }
 
 i {
@@ -38,28 +41,39 @@ footer {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  font-family: var(--heading-font);
+  font-family: var(--main-font);
+}
+
+button {
+  width: 62%;
+  height: 16px;
+  font-size: 1rem;
+  text-align: center;
+  border-radius: 10px;
+  border: none;
+  color: grey;
+  background-color: lightgrey;
 }
 
 .content {
-  display: grid; 
+  display: grid;
   grid-template-rows: repeat(7, 1fr);
   height: 100vh;
-  padding: 40px 10px 10px 10px;
+  padding: 40px 20px 5px 20px;
 }
 
 .titleCtr {
   grid-column: 5/2;
   display: flex;
   flex-direction: column;
-  
+
   align-items: center;
 }
 
 .ellipsisDiv {
   display: flex;
   justify-content: center;
-  padding: 10px
+  padding: 10px;
 }
 
 .menuDiv {
@@ -81,12 +95,41 @@ footer {
 
 .logo {
   font-family: var(--heading-font);
+  font-weight: var(--heading-weight);
   font-style: italic;
   font-size: 0.9rem;
-  opacity: 80%;
+  opacity: 60%;
 }
 
 .coreAppCtr {
-  grid-row: 2/7
+  grid-row: 2/7;
 }
 
+.taskItem {
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+}
+
+.taskInfoDiv {
+  grid-column: 1/5;
+}
+
+.listInfoDiv {
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  grid-column: 5/6;
+}
+
+.listAssignment {
+  border-radius: 50%;
+  height: 16px;
+  width: 16px;
+  margin-bottom: 3px;
+  background-color: blue;
+}
+
+.taskCompleteDiv {
+  grid-column: 6/8;
+  text-align: center;
+}
