--- a/src/styles.css
+++ b/src/styles.css
@@ -58,6 +58,39 @@ hr {
   margin-bottom: 10px;
 }
 
+dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100vw;
+  height: 100vh;
+  border: none;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 100%;
+  height: 100%;
+  padding: 40px;
+}
+
+input,
+textarea,
+.priorityBtn,
+.submitBtn .deleteBtn {
+  margin-top: 5px;
+  font-family: var(--main-font);
+}
+
+input,
+textarea {
+  padding: 5px;
+  width: 100%;
+}
+
 .content {
   display: grid;
   grid-template-rows: repeat(7, 1fr);
@@ -206,4 +239,53 @@ hr {
 
 .done {
   opacity: 50%;
+}
+
+/* dialog */
+
+.dialogDivs > button {
+  border-radius: 1rem;
+}
+
+.dialogDivs > h2 {
+  font-size: 0.8rem;
+}
+
+#taskDialogDiv6 > h2 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+}
+
+#taskDialogDiv0 {
+  display: grid;
+  grid-template-columns: 1fr auto;
+  align-items: center;
+}
+
+.closeBtn {
+  grid-column: 2/3;
+  width: fit-content;
+  height: fit-content;
+  font-size: 2rem;
+  background-color: white;
+  border: none;
+}
+
+.submitBtn,
+.deleteBtn {
+  font-size: 1rem;
+  background-color: white;
+  padding: 0.5rem;
+}
+
+.priorityBtn {
+  border: none;
+  padding: 0.25rem;
+}
+
+.priorityBtn,
+.submitBtn,
+.deleteBtn {
+  width: 40%;
+  margin: 5%;
 }
