--- a/src/styles.css
+++ b/src/styles.css
@@ -247,11 +247,17 @@ textarea {
   border-radius: 1rem;
 }
 
-.dialogDivs > h2 {
+label {
   font-size: 0.8rem;
 }
 
-#taskDialogDiv6 > h2 {
+#taskDialogDiv4 {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr auto;
+}
+
+#taskDialogDiv4 > label {
   grid-column: 1/3;
   grid-row: 1/2;
 }
@@ -274,18 +280,25 @@ textarea {
 .submitBtn,
 .deleteBtn {
   font-size: 1rem;
-  background-color: white;
   padding: 0.5rem;
+  width: 40%;
+  margin: 5%;
+  border: none;
 }
 
 .priorityBtn {
   border: none;
-  padding: 0.25rem;
+  padding: 0.5rem;
+  justify-self: center;
+  width: 70%;
+  margin-top: 10px;
 }
 
-.priorityBtn,
-.submitBtn,
+.submitBtn {
+  background-color: aquamarine;
+}
+
 .deleteBtn {
-  width: 40%;
-  margin: 5%;
+  background-color: lightcoral;
+  color: white;
 }
