--- a/src/styles.css
+++ b/src/styles.css
@@ -79,16 +79,10 @@ form {
 
 input,
 textarea,
-.priorityBtn,
+.highPriority,
 .submitBtn .deleteBtn {
   margin-top: 5px;
   font-family: var(--main-font);
-}
-
-input,
-textarea {
-  padding: 5px;
-  width: 100%;
 }
 
 .content {
@@ -253,13 +247,17 @@ label {
 
 #taskDialogDiv4 {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(6, 1fr);
   grid-template-rows: 1fr auto;
 }
 
-#taskDialogDiv4 > label {
-  grid-column: 1/3;
+#taskDialogDiv4 > p {
+  grid-column: 1/7;
   grid-row: 1/2;
+}
+
+#taskDialogDiv4 > label {
+  margin-top: 14px;
 }
 
 #taskDialogDiv0 {
@@ -286,10 +284,10 @@ label {
   border: none;
 }
 
-.priorityBtn {
+.highPriority {
+  grid-column: 1/2;
   border: none;
   padding: 0.5rem;
-  justify-self: center;
   width: 70%;
   margin-top: 10px;
 }
@@ -301,4 +299,9 @@ label {
 .deleteBtn {
   background-color: lightcoral;
   color: white;
+}
+
+.input {
+  padding: 5px;
+  width: 100%;
 }
