--- a/src/styles.css
+++ b/src/styles.css
@@ -51,6 +51,7 @@ footer {
   font-family: var(--main-font);
   border-radius: 0 0 5px 5px;
   border-top: solid 1px lightgray;
+  background-color: #020101;
 }
 
 hr {
@@ -117,10 +118,15 @@ textarea,
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: #7f7f7f;
 }
 
 .menuItemDiv > i {
   margin-bottom: 5px;
+}
+
+.selected {
+  color: aquamarine;
 }
 
 .logo {
@@ -150,12 +156,18 @@ textarea,
   grid-column: 1/5;
 }
 
+.taskDesc,
+.taskTitle {
+  text-overflow: ellipsis;
+}
+
 .taskTitle {
   padding-left: 3px;
 }
 
 .taskDesc {
   padding-left: 5px;
+  margin-top: 3px;
 }
 
 .moreDiv {
@@ -189,7 +201,7 @@ textarea,
 }
 
 .priority {
-  border-left: solid 3px red;
+  border-left: solid 3px coral;
 }
 
 .completeBtn {
