--- a/src/styles.css
+++ b/src/styles.css
@@ -221,7 +221,8 @@ textarea,
   font-size: 1rem;
 }
 
-.addNewBtn {
+.addNewBtn,
+.addNewListBtn {
   position: fixed;
   width: fit-content;
   height: fit-content;
@@ -282,7 +283,8 @@ label {
   margin-top: 14px;
 }
 
-#taskDialogDiv0 {
+#taskDialogDiv0,
+#listDialogDiv0 {
   display: grid;
   grid-template-columns: 1fr auto;
   align-items: center;
@@ -350,4 +352,11 @@ label {
 .list-colour {
   align-self: center;
   margin-right: 10%;
+}
+
+.colorPickerContainer {
+  width: 25%;
+  border-radius: 1rem;
+  text-align: center;
+  margin-top: 5px;
 }
