Fix task rendering for chosen list

--- a/src/styles.css
+++ b/src/styles.css
@@ -187,9 +187,9 @@ textarea,
   margin-bottom: 3px;
 }
 
-.listAssignment {
+/* .listAssignment {
   background-color: blue;
-}
+} */
 .editTask {
   color: grey;
   opacity: 80%;
