--- a/src/styles.css
+++ b/src/styles.css
@@ -11,9 +11,12 @@
 }
 
 body {
+  display: flex;
+  flex-direction: column;
   font-size: 16px;
   line-height: 1.3;
   font-family: var(--main-font);
+  min-height: 100vh;
 }
 
 header {
@@ -43,7 +46,6 @@ i {
 
 footer {
   grid-row: 7/8;
-  position: sticky;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -89,7 +91,7 @@ textarea,
 .content {
   display: grid;
   grid-template-rows: repeat(7, 1fr);
-  height: 100vh;
+  min-height: 100vh;
   padding: 40px 20px 5px 20px;
 }
 
@@ -144,6 +146,7 @@ textarea,
   gap: 20%;
   grid-row: 2/7;
   margin-bottom: 10px;
+  overflow-y: auto;
 }
 
 .taskItem {
