--- a/src/styles.css
+++ b/src/styles.css
@@ -57,8 +57,9 @@ footer {
 }
 
 hr {
+  grid-column: 1/9;
   opacity: 30%;
-  margin-bottom: 10px;
+  margin: 10px 0 10px 0;
 }
 
 dialog {
@@ -77,7 +78,7 @@ form {
   justify-content: space-around;
   width: 100%;
   height: 100%;
-  padding: 40px;
+  padding: 2rem;
 }
 
 input,
@@ -153,6 +154,7 @@ textarea,
   display: grid;
   grid-template-columns: repeat(8, 1fr);
   padding: 10px 0;
+  width: 100%;
 }
 
 .taskInfoDiv {
