Assign grid columns to list ui

--- a/src/styles.css
+++ b/src/styles.css
@@ -363,6 +363,13 @@ label {
   font-size: 3rem;
 }
 
+.list-ctr {
+  grid-row: 2/7;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+}
+
 .list-item {
   display: flex;
   justify-content: space-between;
