--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,7 @@ header {
   grid-template-columns: repeat(5, 1fr);
   font-family: var(--heading-font);
   font-weight: var(--heading-weight);
+  margin-top: 40px;
 }
 
 h1,
@@ -93,7 +94,7 @@ textarea,
   display: grid;
   grid-template-rows: repeat(7, 1fr);
   min-height: 100vh;
-  padding: 40px 20px 5px 20px;
+  /* padding: 40px 20px 5px 20px; */
 }
 
 .titleCtr {
@@ -148,6 +149,7 @@ textarea,
   grid-row: 2/7;
   margin-bottom: 10px;
   overflow-y: auto;
+  padding: 0 10px 0 10px;
 }
 
 .taskItem {
@@ -368,6 +370,7 @@ label {
   overflow-y: auto;
   display: flex;
   flex-direction: column;
+  padding: 0 10px 0 10px;
 }
 
 .list-item {
