--- a/src/styles.css
+++ b/src/styles.css
@@ -93,7 +93,7 @@ textarea,
 .content {
   display: grid;
   grid-template-rows: repeat(7, 1fr);
-  min-height: 100vh;
+  height: 100vh;
   /* padding: 40px 20px 5px 20px; */
 }
 
