--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
 body {
   display: flex;
   flex-direction: column;
-  font-size: 16px;
+  font-size: 24px;
   line-height: 1.3;
   font-family: var(--main-font);
   min-height: 100vh;
@@ -249,8 +249,8 @@ textarea,
   padding: 8px;
   border-radius: 50%;
   border: none;
-  right: 39px;
-  bottom: 159px;
+  right: 10%;
+  bottom: 25%;
 }
 
 .doneCtr {
