Adjust size and spacing of dialog boxes

--- a/src/styles.css
+++ b/src/styles.css
@@ -69,7 +69,7 @@ dialog {
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100vw;
-  height: 100vh;
+  height: fit-content;
   border: none;
 }
 
@@ -278,6 +278,10 @@ textarea,
 }
 
 /* dialog */
+
+.dialogDivs {
+  margin-bottom: 1rem;
+}
 
 .dialogDivs > button {
   border-radius: 1rem;
