--- a/src/styles.css
+++ b/src/styles.css
@@ -54,7 +54,7 @@ footer {
   font-family: var(--main-font);
   border-radius: 0 0 5px 5px;
   border-top: solid 1px lightgray;
-  background-color: #020101;
+  background-color: #6184c6;
 }
 
 hr {
@@ -93,7 +93,7 @@ textarea,
 .content {
   display: grid;
   grid-template-rows: repeat(7, 1fr);
-
+  grid-template-columns: 1fr;
   height: 100vh;
   /* padding: 40px 20px 5px 20px; */
 }
@@ -123,7 +123,7 @@ textarea,
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #7f7f7f;
+  color: #f6f4f9;
 }
 
 .menuItemDiv > i {
@@ -131,7 +131,7 @@ textarea,
 }
 
 .selected {
-  color: aquamarine;
+  color: #fcd752;
 }
 
 .logo {
@@ -140,7 +140,7 @@ textarea,
   font-style: italic;
   font-size: 0.9rem;
   opacity: 80%;
-  color: aquamarine;
+  color: #f6f4f9;
 }
 
 .coreAppCtr {
@@ -230,6 +230,7 @@ textarea,
 .nothing-complete {
   color: grey;
   opacity: 80%;
+  z-index: 1000;
 }
 
 .nothing-complete {
@@ -276,11 +277,13 @@ textarea,
   border: none;
   right: 10%;
   bottom: 25%;
+  z-index: 1000;
 }
 
 .doneCtr {
   color: black;
   font-weight: 400;
+  z-index: 999;
 }
 
 .doneBtn {
@@ -293,7 +296,7 @@ textarea,
 }
 
 .overdue {
-  color: coral;
+  color: #fca3b9;
   font-weight: 600;
 }
 
@@ -405,6 +408,7 @@ label {
 .list-item {
   display: flex;
   justify-content: space-between;
+  z-index: 999;
 }
 
 .list-btns-ctr {
@@ -441,6 +445,7 @@ label {
     grid-column: 1/2;
     grid-row: 2/8;
     justify-content: flex-start;
+    border: none;
   }
 
   header {
@@ -470,13 +475,22 @@ label {
     margin-top: 10vh;
   }
 
+  .listAssignment {
+    z-index: 1000;
+  }
+
+  .completeBtn {
+    z-index: 1000;
+  }
+
   .banner {
     grid-column: 1/3;
     display: grid;
     grid-template-columns: 300px 1fr;
     justify-content: space-between;
     align-content: center;
-    background-color: #9b9b9b;
+    background-color: #fca3b9;
+    border: none;
   }
 
   .banner-profile {
@@ -485,6 +499,7 @@ label {
     align-items: center;
     gap: 1rem;
     margin-right: 4rem;
+    color: #222222;
   }
   .profile-ctr {
     grid-row: 2/8;
