--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
   --main-font: "Montserrat", sans-serif;
   --heading-font: "Montserrat", sans-serif;
   --heading-weight: 600;
+  --accent-color: #f6f4f9;
 }
 
 * {
@@ -10,105 +11,34 @@
   box-sizing: border-box;
 }
 
-body {
-  display: flex;
-  flex-direction: column;
-  font-size: 16px;
-  line-height: 1.3;
-  font-family: var(--main-font);
-  min-height: 100vh;
-}
-
-header {
-  grid-row: 1/2;
-  position: sticky;
-  display: grid;
-  grid-template-columns: repeat(5, 1fr);
-  font-family: var(--heading-font);
-  font-weight: var(--heading-weight);
-  margin-top: 40px;
-}
-
-h1,
-h2,
-h3,
-h4 {
-  font-weight: var(--heading-weight);
-}
-
-h2 {
-  font-size: 1rem;
-  font-weight: 400;
-}
-
-i {
-  font-size: 18px;
-}
-
 footer {
-  grid-row: 7/8;
+  grid-column: 1/3;
+  grid-row: 4/5;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
   font-family: var(--main-font);
   border-radius: 0 0 5px 5px;
-  border-top: solid 1px lightgray;
   background-color: #6184c6;
-}
-
-hr {
-  grid-column: 1/9;
-  opacity: 30%;
-  margin: 10px 0 10px 0;
-}
-
-dialog {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100vw;
-  height: fit-content;
-  border: none;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  width: 100%;
-  height: 100%;
-  padding: 2rem;
-}
-
-input,
-textarea,
-.highPriority,
-.submitBtn .deleteBtn {
-  margin-top: 5px;
-  font-family: var(--main-font);
+  padding: 1.5rem 0 1.5rem;
 }
 
 .content {
   display: grid;
-  grid-template-rows: repeat(7, 1fr);
-  grid-template-columns: 1fr;
+  grid-template-columns: 25% 75%;
+  grid-template-rows: repeat(5, 1fr);
   height: 100vh;
+  font-size: 24px;
 }
 
-.titleCtr {
-  grid-column: 5/2;
-  display: flex;
-  flex-direction: column;
-
-  align-items: center;
-}
-
-.ellipsisDiv {
-  display: flex;
-  justify-content: center;
-  padding: 10px;
+.logo {
+  font-family: var(--heading-font);
+  font-weight: var(--heading-weight);
+  font-style: italic;
+  font-size: 0.9rem;
+  opacity: 90%;
+  color: #fca3b9;
 }
 
 .menuDiv {
@@ -122,398 +52,72 @@ textarea,
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #f6f4f9;
+  color: var(--accent-color);
 }
 
 .menuItemDiv > i {
   margin-bottom: 5px;
 }
 
-.selected {
-  color: #fcd752;
-}
-
-.logo {
-  font-family: var(--heading-font);
-  font-weight: var(--heading-weight);
-  font-style: italic;
-  font-size: 0.9rem;
-  opacity: 80%;
-  color: #fca3b9;
-}
-
-.coreAppCtr {
-  display: flex;
-  flex-direction: column;
-  gap: 20%;
-  grid-row: 2/7;
-  margin-bottom: 10px;
-  overflow-y: auto;
-  padding: 0 10px 0 10px;
-}
-
-.no-tasks-ctr {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  margin-top: 2rem;
-}
-
-.no-tasks-img {
-  height: 8rem;
-  width: auto;
-}
-
-.taskItem {
-  display: grid;
-  grid-template-columns: repeat(8, 1fr);
-  padding: 10px 0;
-  width: 100%;
-}
-
-.taskInfoDiv {
-  grid-column: 1/5;
-}
-
-.taskDesc,
-.taskTitle {
-  text-overflow: ellipsis;
-}
-
-.taskTitle {
-  padding-left: 3px;
-}
-
-.taskDesc {
-  padding-left: 5px;
-  margin-top: 3px;
-  font-size: 0.8rem;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-}
-
-.editDiv,
-.changeListDiv {
-  display: flex;
-  justify-content: end;
-  align-items: end;
-}
-
-.editDiv {
-  grid-column: 5/6;
-}
-
-.changeListDiv {
-  grid-column: 6/7;
-}
-
-.listAssignment,
-.editTask,
-.list-colour {
-  border-radius: 50%;
-  height: 16px;
-  width: 16px;
-  margin-bottom: 3px;
-}
-
-.list-desc {
-  font-size: 0.8rem;
-}
-
-.view-edit,
-.no-tasks-text,
-.nothing-complete {
-  color: grey;
-  opacity: 80%;
-  z-index: 1000;
-}
-
-.nothing-complete {
-  text-align: center;
-}
-
-.taskCompleteDiv {
-  display: flex;
-  flex-direction: column;
-  grid-column: 7/9;
-  text-align: center;
-  align-items: center;
-}
-
-.priority {
-  border-left: solid 3px coral;
-}
-
-.completeBtn {
-  width: 5rem;
-  text-align: center;
-  border-radius: 10px;
-  border: none;
-  color: grey;
-}
-
-.todoBtn {
-  background-color: lightgrey;
-}
-
-.taskCompleteDiv > .completeBtn {
-  height: 16px;
-  font-size: 1rem;
-}
-
-.addNewBtn,
-.addNewListBtn {
-  position: fixed;
-  width: fit-content;
-  height: fit-content;
-  font-size: 1.8rem;
-  padding: 8px;
-  border-radius: 50%;
-  border: none;
-  right: 10%;
-  bottom: 25%;
-  z-index: 1000;
-}
-
-.doneCtr {
-  color: black;
-  font-weight: 400;
-  z-index: 999;
-}
-
-.doneBtn {
-  background-color: lightgreen;
-}
-
-.doneCtr > .taskItem {
-  opacity: 50%;
-  text-decoration: line-through;
-}
-
-.overdue {
-  color: #fca3b9;
-  font-weight: 600;
-}
-
-.today {
-  font-weight: 600;
-  color: black;
-}
-
-.dialogDivs {
-  margin-bottom: 1rem;
-}
-
-.dialogDivs > button {
-  border-radius: 1rem;
-}
-
-label {
-  display: block;
-  font-size: 0.8rem;
-}
-
-#taskDialogDiv4 {
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 1fr auto;
-}
-
-#taskDialogDiv4 > p {
-  grid-column: 1/7;
-  grid-row: 1/2;
-  font-size: 0.8rem;
-}
-
-#taskDialogDiv4 > label {
-  margin-top: 14px;
-}
-
-#taskDialogDiv0,
-#listDialogDiv0 {
-  display: grid;
-  grid-template-columns: 1fr auto;
-  align-items: center;
-}
-
-.closeBtn {
-  grid-column: 2/3;
-  width: fit-content;
-  height: fit-content;
-  font-size: 2rem;
-  background-color: white;
-  border: none;
-}
-
-.submitBtn,
-.deleteBtn {
-  font-size: 1rem;
-  padding: 0.5rem;
-  width: 40%;
-  margin: 5%;
-  border: none;
-}
-
-.highPriority {
-  grid-column: 1/2;
-  border: none;
-  padding: 0.5rem;
-  width: 70%;
-  margin-top: 10px;
-}
-
-.submitBtn {
-  background-color: aquamarine;
-}
-
-.deleteBtn {
-  background-color: lightcoral;
-  color: white;
-}
-
-.input {
-  padding: 5px;
-  width: 100%;
-}
-
-.profile-ctr {
-  grid-row: 1/7;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-}
-
-.profile-ctr > i {
-  margin-top: 3%;
-  font-size: 3rem;
-}
-
-.list-ctr {
-  grid-row: 2/7;
-  overflow-y: auto;
-  display: flex;
-  flex-direction: column;
-  padding: 0 10px 0 10px;
-}
-
-.list-item {
-  display: flex;
-  justify-content: space-between;
-  z-index: 999;
-}
-
-.list-btns-ctr {
-  display: flex;
-  width: 20%;
-  justify-content: space-between;
-}
-
-.list-colour,
-.view-edit {
-  align-self: center;
-  margin-right: 10%;
-}
-
-.colorPickerContainer {
-  width: 25%;
-  border-radius: 1rem;
-  text-align: center;
-  margin-top: 5px;
-}
-
-.hidden,
-.banner {
-  display: none;
-}
-
-.menuItemDiv:hover,
-.view-edit:hover,
-.listAssignment:hover,
-button:hover {
+.menuItemDiv:hover {
   cursor: pointer;
+  opacity: 80%;
 }
 
 @media (min-width: 720px) {
-  .content {
-    grid-template-columns: 300px 1fr;
-    grid-template-rows: 100px repeat(6, 1fr);
-  }
-
   footer {
     grid-column: 1/2;
-    grid-row: 2/8;
+    grid-row: 2/6;
     justify-content: flex-start;
     border: none;
   }
 
+  footer > .logo {
+    display: none;
+  }
+
   header {
-    grid-row: 2/8;
-    grid-column: 2/3;
-  }
-
-  dialog {
-    max-width: 600px;
-  }
-  .logo {
-    grid-row: 1/2;
-    font-size: 2rem;
-    text-align: center;
-    color: #f6f4f9;
-  }
-
-  .coreAppCtr {
-    grid-row: 3/8;
-    grid-column: 2/3;
-  }
-
-  .list-ctr {
-    grid-row: 3/8;
-    grid-column: 2/3;
-  }
-
-  .menuDiv {
-    flex-direction: column;
-    height: 40%;
-    margin-top: 10vh;
-  }
-
-  .listAssignment {
-    z-index: 1000;
-  }
-
-  .completeBtn {
-    z-index: 1000;
-  }
-
-  .banner {
     grid-column: 1/3;
+    grid-row: 1/2;
     display: grid;
-    grid-template-columns: 300px 1fr;
-    justify-content: space-between;
+    grid-template-columns: 25% 75%;
     align-content: center;
     background-color: #fca3b9;
     border: none;
   }
 
-  .banner-profile {
-    display: flex;
-    justify-content: flex-end;
+  .menuDiv {
+    flex-direction: column;
     align-items: center;
-    gap: 1rem;
-    margin-right: 4rem;
-    color: #222222;
-  }
-  .profile-ctr {
-    grid-row: 2/8;
+    width: 100%;
+    height: 80%;
+    margin-top: 10%;
   }
 
-  footer > h3 {
-    display: none;
+  .menuItemDiv {
+    width: fit-content;
+  }
+
+  .logo {
+    grid-column: 1/2;
+    font-size: 2rem;
+    text-align: center;
+    color: var(--accent-color);
+  }
+
+  .header-profile {
+    display: flex;
+    justify-content: end;
+    padding-right: 10rem;
+  }
+
+  .header-profile > i {
+    color: var(--accent-color);
+  }
+
+  .view-ctr {
+    grid-column: 2/3;
+    grid-row: 2/6;
+    background-color: var(--accent-color);
   }
 }
