--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@
 
 footer {
   grid-column: 1/3;
-  grid-row: 4/5;
+  grid-row: 5/6;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,6 +22,17 @@ footer {
   border-radius: 0 0 5px 5px;
   background-color: #6184c6;
   padding: 1.5rem 0 1.5rem;
+}
+
+header {
+  display: none;
+}
+
+h1,
+.desc {
+  font-family: var(--heading-font);
+  text-align: center;
+  padding-top: 1rem;
 }
 
 .content {
@@ -62,6 +73,22 @@ footer {
 .menuItemDiv:hover {
   cursor: pointer;
   opacity: 80%;
+}
+
+.view-ctr {
+  display: grid;
+  grid-template-rows: 10%, 1fr;
+  grid-column: 1/3;
+  grid-row: 1/5;
+  background-color: var(--accent-color);
+}
+
+.heading-ctr {
+  grid-row: 1/2;
+}
+
+.priority {
+  border-left: orangered solid 0.4rem;
 }
 
 @media (min-width: 720px) {
@@ -118,6 +145,5 @@ footer {
   .view-ctr {
     grid-column: 2/3;
     grid-row: 2/6;
-    background-color: var(--accent-color);
   }
 }
