--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,8 @@
   --heading-font: "Montserrat", sans-serif;
   --heading-weight: 600;
   --accent-color: #f6f4f9;
+  --accent-color-2: #fca3b9;
+  --main-font-size: 18px;
 }
 
 * {
@@ -28,6 +30,20 @@ header {
   display: none;
 }
 
+button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: fit-content;
+  padding: 0.1rem;
+  font-size: var(--main-font-size);
+  font-family: var(--main-font);
+  border-radius: 1rem;
+  border: black 1px solid;
+  background-color: var(--accent-color-2);
+}
+
 h1,
 .desc {
   font-family: var(--heading-font);
@@ -35,12 +51,17 @@ h1,
   padding-top: 1rem;
 }
 
+h2 {
+  font-size: 1.4rem;
+}
+
 .content {
   display: grid;
   grid-template-columns: 25% 75%;
   grid-template-rows: repeat(5, 1fr);
   height: 100vh;
-  font-size: 24px;
+  font-family: var(--main-font);
+  font-size: var(--main-font-size);
 }
 
 .logo {
@@ -87,6 +108,51 @@ h1,
   grid-row: 1/2;
 }
 
+.task-ctr {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  height: fit-content;
+  margin: 0.5rem;
+}
+
+.text-div {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  margin-bottom: 1rem;
+  padding-left: 0.2rem;
+}
+
+.text-div > p {
+  padding-top: 0.3rem;
+}
+
+.open-edit-div {
+  grid-column: 1/2;
+  grid-row: 2/3;
+
+  /* width: fit-content;
+  border-radius: 1rem;
+  border: solid black 1px;
+  padding: 4px; */
+}
+
+.open-edit-div > i {
+  font-size: var(--main-font-size);
+}
+
+.open-edit-div,
+.task-complete-div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.task-complete-div {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
 .priority {
   border-left: orangered solid 0.4rem;
 }
@@ -111,6 +177,10 @@ h1,
     align-content: center;
     background-color: #fca3b9;
     border: none;
+  }
+
+  button {
+    width: 25%;
   }
 
   .menuDiv {
