--- a/src/styles.css
+++ b/src/styles.css
@@ -34,9 +34,9 @@ button {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50%;
+  width: fit-content;
   height: fit-content;
-  padding: 0.1rem;
+  padding: 0.5rem;
   font-size: var(--main-font-size);
   font-family: var(--main-font);
   border-radius: 1rem;
@@ -53,6 +53,11 @@ h1,
 
 h2 {
   font-size: 1.4rem;
+}
+
+hr {
+  width: 90%;
+  opacity: 80%;
 }
 
 .content {
@@ -110,14 +115,15 @@ h2 {
 
 .task-ctr {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 50% 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   height: fit-content;
   margin: 0.5rem;
+  border-bottom: rgb(185, 185, 185) solid 1px;
 }
 
 .text-div {
-  grid-column: 1/3;
+  grid-column: 1/4;
   grid-row: 1/2;
   margin-bottom: 1rem;
   padding-left: 0.2rem;
@@ -128,7 +134,7 @@ h2 {
 }
 
 .open-edit-div {
-  grid-column: 1/2;
+  grid-column: 2/3;
   grid-row: 2/3;
 
   /* width: fit-content;
@@ -144,17 +150,36 @@ h2 {
 .open-edit-div,
 .task-complete-div {
   display: flex;
-  justify-content: center;
+  justify-content: end;
   align-items: center;
+  flex-direction: column;
+  padding-bottom: 1rem;
 }
 
 .task-complete-div {
-  grid-column: 2/3;
+  grid-column: 3/4;
   grid-row: 2/3;
 }
 
+.due-date {
+  margin-bottom: 0.4rem;
+}
+
 .priority {
-  border-left: orangered solid 0.4rem;
+  border-left: rgb(235, 95, 44) solid 0.4rem;
+}
+
+.overdue {
+  color: rgb(235, 95, 44);
+}
+
+.today {
+  color: black;
+}
+
+.today,
+.overdue {
+  font-weight: 600;
 }
 
 @media (min-width: 720px) {
