--- a/src/styles.css
+++ b/src/styles.css
@@ -103,7 +103,7 @@ hr {
 
 .view-ctr {
   display: grid;
-  grid-template-rows: 10%, 1fr;
+  grid-template-rows: 17% 1fr;
   grid-column: 1/3;
   grid-row: 1/5;
   background-color: var(--accent-color);
@@ -119,14 +119,15 @@ hr {
   border-radius: 2rem;
 }
 
-.todo-done-ctr {
+.todo-done-ctr,
+.lists-ctr {
   overflow-y: auto;
 }
 
 .heading-ctr {
   grid-row: 1/2;
   position: sticky;
-  margin-bottom: 1.5rem;
+  padding-bottom: 2rem;
 }
 
 .logo {
@@ -136,7 +137,7 @@ hr {
 
 .item-ctr {
   display: grid;
-  grid-template-columns: 50% 1fr 1fr;
+  grid-template-columns: 65% 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   height: fit-content;
   margin: 0.5rem;
@@ -144,8 +145,8 @@ hr {
 }
 
 .text-div {
-  grid-column: 1/4;
-  grid-row: 1/2;
+  grid-column: 1/2;
+  grid-row: 1/3;
   margin-bottom: 1rem;
   padding-left: 0.2rem;
 }
@@ -169,21 +170,29 @@ hr {
 }
 
 .open-edit-div,
-.task-complete-div {
+.task-complete-div,
+.delete-div,
+.icon-div {
   display: flex;
-  justify-content: end;
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   padding-bottom: 1rem;
 }
 
-.task-complete-div {
+.task-complete-div,
+.delete-div {
   grid-column: 3/4;
   grid-row: 2/3;
 }
 
 .due-date {
   margin-bottom: 0.4rem;
+}
+
+.icon-div {
+  grid-column: 3/4;
+  grid-row: 1/2;
 }
 
 .priority {
