--- a/src/styles.css
+++ b/src/styles.css
@@ -42,6 +42,7 @@ button {
   border-radius: 1rem;
   border: black 1px solid;
   background-color: var(--accent-color-2);
+  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
 
 h1,
@@ -147,7 +148,10 @@ hr {
 .text-div {
   grid-column: 1/2;
   grid-row: 1/3;
-  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin-bottom: 0.5rem;
   padding-left: 0.2rem;
 }
 
@@ -187,16 +191,33 @@ hr {
 }
 
 .due-date {
+  grid-column: 2/4;
+  grid-row: 1/2;
   margin-bottom: 0.4rem;
+
+  /* color: gray; */
 }
 
 .icon-div {
-  grid-column: 3/4;
+  grid-column: 2/4;
   grid-row: 1/2;
 }
 
+.list-icon-btn {
+  border-radius: 1.4rem;
+  font-size: 1.4rem;
+  /* background-color: var(--accent-color); */
+  /* font-weight: 600; */
+  /* padding: 0.3rem 0.6rem; */
+  padding: 0rem 2rem;
+  /* width: 2rem; */
+  /* border: none; */
+  /* background-color: var(--accent-color); */
+}
+
 .priority {
-  border-left: rgb(235, 95, 44) solid 0.4rem;
+  border-left: rgb(235, 95, 44) solid 0.3rem;
+  opacity: 90%;
 }
 
 .overdue {
@@ -236,10 +257,6 @@ hr {
     align-content: center;
     background-color: #fca3b9;
     border: none;
-  }
-
-  button {
-    width: 25%;
   }
 
   .menuDiv {
