--- a/src/styles.css
+++ b/src/styles.css
@@ -67,6 +67,12 @@ img {
   padding-right: 1.3rem;
 }
 
+form {
+  grid-row: 2/3;
+  width: 91vw;
+  padding: 1rem;
+}
+
 .content {
   display: grid;
   grid-template-columns: 25% 75%;
@@ -127,7 +133,9 @@ img {
 }
 
 .todo-done-ctr,
-.lists-ctr {
+.lists-ctr,
+.add-new,
+form {
   overflow-y: auto;
 }
 
@@ -191,11 +199,6 @@ img {
 .open-edit-div {
   grid-column: 2/3;
   grid-row: 2/3;
-
-  /* width: fit-content;
-  border-radius: 1rem;
-  border: solid black 1px;
-  padding: 4px; */
 }
 
 .open-edit-div > i {
@@ -223,8 +226,6 @@ img {
   grid-column: 2/4;
   grid-row: 1/2;
   margin-bottom: 0.4rem;
-
-  /* color: gray; */
 }
 
 .icon-div {
@@ -235,13 +236,7 @@ img {
 .list-icon-btn {
   border-radius: 1.4rem;
   font-size: 1.4rem;
-  /* background-color: var(--accent-color); */
-  /* font-weight: 600; */
-  /* padding: 0.3rem 0.6rem; */
   padding: 0rem 2rem;
-  /* width: 2rem; */
-  /* border: none; */
-  /* background-color: var(--accent-color); */
 }
 
 .priority {
@@ -267,8 +262,81 @@ img {
   margin-top: 2rem;
 }
 
+.h1-new {
+  grid-row: 1/2;
+  text-align: center;
+  margin-bottom: 5rem;
+}
+
+.add-new {
+  grid-row: 1/3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-ctr,
+.priority-ctr,
+.button-ctr {
+  display: flex;
+  margin-bottom: 0.8rem;
+}
+
+.form-ctr {
+  flex-direction: column;
+}
+
+.priority-ctr {
+  gap: 0.4rem;
+}
+
+.input {
+  width: 100%;
+  padding-left: 0.1rem;
+  font-family: var(--main-font);
+  font-size: 1rem;
+}
+
+.button-ctr {
+  gap: 1rem;
+  margin-top: 1rem;
+}
+
+.button-ctr > button,
+.choose-icon-ctr > button {
+  width: 40%;
+}
+
+.choose-icon-ctr > button {
+  background-color: #a0bff8;
+}
+
+.close-ctr {
+  text-align: end;
+}
+
+.choose-icon-ctr {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+  margin-bottom: 0.1rem;
+  gap: 1rem;
+}
+
+.choose-icon-ctr > input {
+  width: 1.8rem;
+  height: 1.8rem;
+  font-size: 1.5rem;
+  text-align: center;
+}
+
 .hidden {
   display: none;
+}
+
+.selected {
+  font-weight: 800;
+  opacity: 100%;
 }
 
 @media (min-width: 720px) {
