--- a/src/styles.css
+++ b/src/styles.css
@@ -13,6 +13,11 @@
   box-sizing: border-box;
 }
 
+body {
+  max-height: 100vh;
+  overflow: hidden;
+}
+
 footer {
   grid-column: 1/3;
   grid-row: 5/6;
@@ -43,6 +48,10 @@ button {
   border: black 1px solid;
   background-color: var(--accent-color-2);
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+}
+
+button:hover {
+  cursor: pointer;
 }
 
 h1,
@@ -139,9 +148,9 @@ form {
   overflow-y: auto;
 }
 
-.todo-ctr {
-  margin-bottom: 3rem;
-}
+/* .todo-ctr {
+  margin: 5rem 0;
+} */
 
 .done-ctr {
   margin: 0 0.5rem;
@@ -335,8 +344,8 @@ form {
 }
 
 .selected {
-  font-weight: 800;
-  opacity: 100%;
+  font-weight: 900;
+  color: var(--accent-color-2);
 }
 
 @media (min-width: 720px) {
@@ -345,6 +354,7 @@ form {
     grid-row: 2/6;
     justify-content: flex-start;
     border: none;
+    max-height: 80vh;
   }
 
   footer > .logo {
@@ -354,11 +364,30 @@ form {
   header {
     grid-column: 1/3;
     grid-row: 1/2;
+    position: sticky;
+    top: 0;
     display: grid;
     grid-template-columns: 25% 75%;
     align-content: center;
     background-color: #fca3b9;
     border: none;
+    z-index: 1000;
+  }
+
+  img {
+    max-width: 350px;
+  }
+
+  form {
+    width: 70%;
+  }
+
+  .content {
+    min-height: 100vh;
+  }
+
+  .item-ctr {
+    grid-template-columns: 80% 1fr 1fr;
   }
 
   .menuDiv {
@@ -394,5 +423,24 @@ form {
   .view-ctr {
     grid-column: 2/3;
     grid-row: 2/6;
+    max-height: 80vh;
+    padding-bottom: 1rem;
+  }
+
+  .add-new-btn {
+    position: fixed;
+    right: 10%;
+    top: 25%;
+    z-index: 1000;
+  }
+
+  .button-ctr > button,
+  .choose-icon-ctr > button {
+    width: 30%;
+  }
+
+  .todo-done-ctr,
+  .lists-ctr {
+    padding: 0 15%;
   }
 }
