--- a/src/styles.css
+++ b/src/styles.css
@@ -148,10 +148,6 @@ form {
   overflow-y: auto;
 }
 
-/* .todo-ctr {
-  margin: 5rem 0;
-} */
-
 .done-ctr {
   margin: 0 0.5rem;
 }
@@ -311,7 +307,7 @@ form {
   margin-top: 1rem;
 }
 
-.button-ctr > button,
+form > .button-ctr > button,
 .choose-icon-ctr > button {
   width: 40%;
 }
@@ -346,6 +342,26 @@ form {
 .selected {
   font-weight: 900;
   color: var(--accent-color-2);
+}
+
+.profile-ctr {
+  grid-row: 1/3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  padding-bottom: 10%;
+}
+
+.avatar {
+  min-height: 180px;
+  width: auto;
+  padding: 0;
+}
+
+.profile-name {
+  font-size: 2rem;
 }
 
 @media (min-width: 720px) {
