--- a/src/styles.css
+++ b/src/styles.css
@@ -279,6 +279,8 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--accent-color);
+  z-index: 1001;
 }
 
 .form-ctr,
@@ -353,6 +355,8 @@ form > .button-ctr > button,
   align-items: center;
   text-align: center;
   padding-bottom: 10%;
+  background-color: var(--accent-color);
+  z-index: 1001;
 }
 
 .avatar {
