--- a/src/styles.css
+++ b/src/styles.css
@@ -179,6 +179,10 @@ form {
   font-size: 1.3rem;
 }
 
+.done-ctr {
+  margin-top: 20%;
+}
+
 .item-ctr {
   display: grid;
   grid-template-columns: 65% 1fr 1fr;
