--- a/src/styles.css
+++ b/src/styles.css
@@ -150,7 +150,7 @@ form {
 }
 
 .done-ctr {
-  margin: 20% 0.5rem 0 0;
+  margin: 10% 0.5rem 0 0;
 }
 
 .done-title {
@@ -288,6 +288,7 @@ form {
 .button-ctr {
   display: flex;
   margin-bottom: 0.8rem;
+  padding-left: 0.1rem;
 }
 
 .form-ctr {
@@ -299,7 +300,7 @@ form {
 }
 
 .input {
-  width: 100%;
+  width: 98%;
   padding-left: 0.1rem;
   font-family: var(--main-font);
   font-size: 1rem;
@@ -374,6 +375,10 @@ form > .button-ctr > button,
   font-size: 2rem;
 }
 
+#inputTaskDate {
+  width: fit-content;
+}
+
 @media (min-width: 720px) {
   footer {
     grid-column: 1/2;
@@ -401,7 +406,7 @@ form > .button-ctr > button,
   }
 
   img {
-    max-width: 350px;
+    max-width: 260px;
   }
 
   form {
@@ -479,6 +484,9 @@ form > .button-ctr > button,
     padding: 0 15%;
   }
 
+  .todo-ctr {
+    min-height: 243.797px;
+  }
   .profile-ctr {
     padding-top: 10%;
   }
